integrazione file yaml per gestire le chiamate ai servizi (user wip)
