# tyb_backend/src/main/java/com/tyb/tyb_backend/controller/rest/UserController.java
@@ -1,6 +1,5 @@
 package com.tyb.tyb_backend.controller.rest;
 
-import com.tyb.tyb_backend.dto.CriteriRicercaUser;
 import com.tyb.tyb_backend.model.User;
 import com.tyb.tyb_backend.service.UserService;
 import jakarta.validation.Valid;
@@ -10,9 +9,6 @@ import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import java.util.logging.Logger;
-
-import java.util.Objects;
-
 
 
 @RestController
@@ -25,28 +21,28 @@ public class UserController {
     UserService userService;
 
     @PostMapping(value = "/create", produces = MediaType.APPLICATION_JSON_VALUE)
-    public String createUser(@RequestBody User user){
+    public String createUser(@RequestBody @Valid User user){
         Logger.getGlobal().info("**************** Inserimento Dati User ***************");
        return  userService.createUser(user);
     }
 
 
-    //Metodo con passaggio di parametri
-    @RequestMapping(value = "/{nome}", method = RequestMethod.GET, produces = MediaType.APPLICATION_JSON_VALUE)
-    public String getData2(@PathVariable("nome") String nome){
-
-        if(Objects.equals(nome, "Giorgio")){
-            throw new RuntimeException("Utente non abilitato");
-        }
-        return (String.format("Saluti %s, sono il tuo primo webService rest", nome));
-    }
+  //  //Metodo con passaggio di parametri
+  //  @RequestMapping(value = "/{nome}", method = RequestMethod.GET, produces = MediaType.APPLICATION_JSON_VALUE)
+  //  public String getData2(@PathVariable("nome") String nome){
+//
+  //      if(Objects.equals(nome, "Giorgio")){
+  //          throw new RuntimeException("Utente non abilitato");
+  //      }
+  //      return (String.format("Saluti %s, sono il tuo primo webService rest", nome));
+  //  }
 
 
 
     @PostMapping(value = "/user",  produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<User> getUserFromId(@RequestBody @Valid CriteriRicercaUser criteri){
+    public ResponseEntity<User> getUserUsernameAndPassword(@RequestBody @Valid User user){
         try{
-            User resp = userService.getUser(criteri);
+            User resp = userService.getUser(user);
             if(resp!=null){
                 return new ResponseEntity<>(resp, HttpStatus.OK );
             }
